Update crafts and Art.html

--- a/crafts and Art.html
+++ b/crafts and Art.html
@@ -25,9 +25,10 @@
 		<img src="pottery.jpg">
 		<a href="https://www.africancraft.com/lesotho.php">click here</a></div>
 		<div><li><p>Beadwork:They create necklaces which are made out of clay beads.These are often worn for cultural events and can also incorporate plastic and glass beads.</li>
-		<img src="Beadwork.jpg">
+		<img src="beadwork.jpg">
 		<a href="https://www.africancraft.com/lesotho.php">learn more</a></div>
 		
 </body>
 
 </html>
+
