--- a/traditional clothing.html
+++ b/traditional clothing.html
@@ -17,7 +17,7 @@
 	<center><h1>Basotho Cultural Attire</h1></center>
 	<div class="grid-container"> 
   <div class="grid-item"><img src="seshoeshoe.jpg" height="250" width="250"></div>
-  <div class="grid-item"><img src="kobo.JPG"></div>
+  <div class="grid-item"><img src="kobo.jpg"></div>
   <div class="grid-item"><img src="mokorotlo.jpg" height="250" width="250"></div>
   <div class="grid-item"><img src="head wrap.jpg"></div>
   <div class="grid-item"><video src="Basotho.mp4" controls height="250" width="250"></video></div>
@@ -64,3 +64,4 @@
 </body>
 
 </html>
+
