--- a/traditional clothing.html
+++ b/traditional clothing.html
@@ -38,30 +38,31 @@
   <div class="grid-item"><img src="necklace.jpg"></div>
   <div class="grid-item"><img src="1.jpg"></div>
   <br><br>
-  <div class="grid-menu">
-  <div class="menu-item"><img src="seshoeshoe.jpg" height="250" width="250">
+  <div class="flex-container">
+  <div class="flex-item"><img src="seshoeshoe.jpg" height="250" width="250">
     <p>Seshoeshoe:Brightly colored dresse made from distinctive cotton fabric with bold,intricate patterns.</p></div>
   <a href="https://www.southafrica.net/us/en/travel/article/the-culture-of-basotho-history-people-clothing-and-food">click here</a>
-  <div class="menu-item"><img src="kobo.jpg">
+  <div class="flex-item"><img src="kobo.jpg">
     <p>Blanket:A thick wool blanket with intricate pattern and symbols,drapped around a shoulders like a cloak.These blankets are significant part of Basotho culture and carry deep meaning.</p></div>
   <a href="https://za.pinterest.com/ideas/lesotho-traditional-attire/904978107393/">click here</a>
-  <div class="menu-item"><img src="mokorotlo.jpg" height="250" width="250">
+  <div class="flex-item"><img src="mokorotlo.jpg" height="250" width="250">
   <p>Mokorotlo hat:A conical-shaped hat made from woven straw.Its distictive shape is inspired by Qiloane and serves as a national symbol.</p></div>
   <a href="https://majoradventures.com/the-great-lesotho-cover-up/">click here</a>
-  <div class="grid-item"><img src="head wrap.jpg">
+  <div class="flex-item"><img src="head wrap.jpg">
   <p>Head wrap:This is worn by Basotho women as part of their attire,especially for special occasions.</p></div>
   <a href="https://apara.africa/">click here</a>
-  <div class="menu-item"><img src="blanket.jpg">
+  <div class="flex-item"><img src="blanket.jpg">
   <p>Women wear this blanket to keep their body warm and as part of their outfit.</p></div>
   <a href="https://www.alamy.com/stock-photo/lesotho-traditional-dress.html sortBy=relevant">click here</a>
-  <div class="menu-item"><img src="bead.avif" height="250" width="250">
+  <div class="flex-item"><img src="bead.avif" height="250" width="250">
   <p>This is worn by both men and women and it symbols that a person is a traditional doctor.</p></div>
-  <div class="menu-item"><img src="thethana.jpg">
+  <div class="flex-item"><img src="thethana.jpg">
   <p>A dress made for young girls with clay beads and a sheepskin undergarment</p></div> 
-  <div class="menu-item"><img src="lehlosi.jpg">
+  <div class="flex-item"><img src="lehlosi.jpg">
   <p>A blanket made of skins of leopard or wild cats for cheifs</p></div>
   <a href="https://helplesotho.org/traditional-basotho-dress/">click here</a>
 </body>
 
 </html>
+
 
